@@ -326,6 +326,11 @@ $rcmail_config['dont_override'] = array();
 // 3 - one identity with possibility to edit all params but not email address
 $rcmail_config['identities_level'] = 0;
 
+// Mimetypes supported by the browser.
+// attachments of these types will open in a preview window
+// either a comma-separated list or an array: 'text/plain,text/html,text/xml,image/jpeg,image/gif,image/png,application/pdf'
+$rcmail_config['client_mimetypes'] = null;  # null == default
+
 // mime magic database
 $rcmail_config['mime_magic'] = '/usr/share/misc/magic';
 
